--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
         "concurrently": "^9.0.1",
         "daisyui": "^5.0.47",
         "laravel-vite-plugin": "^1.2.0",
+        "sass": "^1.90.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.7"
     }
 }
